--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,5 +1,9 @@
 {
   "$schema": "https://raw.githubusercontent.com/devcontainers/spec/refs/heads/main/schemas/devContainer.base.schema.json",
   "name": "SSH Key Prometheus Exporter",
-  "image": "mcr.microsoft.com/devcontainers/go:1.3.3-1.22-bookworm"
+  "image": "mcr.microsoft.com/devcontainers/go:1.23",
+
+  "features": {
+    "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
+  }
 }
